add func authChecker to identify user with help of cookies

--- a/home.html
+++ b/home.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shop</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous"> -->
 
-  <link rel="stylesheet" href="home.css">
+  <!-- <link rel="stylesheet" href="home.css"> -->
 </head>
 
 <body>
@@ -31,23 +31,26 @@
           <li>Project List</li>
         </a>
       </ul>
-      <div class="login_btn">
+      <div class="user-status user-login">
         <a href="" class="custom-btn">Login</a>
       </div>
+      <!-- <div class="user-status user-logined">
+        <img src="/prabhu.jpg" alt="">
+      </div> -->
     </nav>
   </header>
-  <section>
+  <!-- <section>
     <div class="carousel_hero">
       <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-           <a href=""> <img src="hanuman (2).jpg" class="d-block w-100" style="height: 40rem;" alt="..."></a>
+           <a href=""> <img src="" class="d-block w-100" style="height: 40rem;" alt="..."></a>
           </div>
           <div class="carousel-item">
-           <a href=""> <img src="hanuman (2).jpg" class="d-block w-100" style="height: 40rem;" alt="..."></a>
+           <a href=""> <img src="" class="d-block w-100" style="height: 40rem;" alt="..."></a>
           </div>
           <div class="carousel-item">
-           <a href=""> <img src="hanuman (2).jpg" class="d-block w-100" style="height: 40rem;" alt="..."></a>
+           <a href=""> <img src="" class="d-block w-100" style="height: 40rem;" alt="..."></a>
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -72,13 +75,13 @@
         <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
           <div class="carousel-inner">
             <div class="carousel-item active">
-             <a href=""> <img src="hanuman (2).jpg" class="d-block w-100" style="height: 40rem;" alt="..."></a>
+             <a href=""> <img src="" class="d-block w-100" style="height: 40rem;" alt="..."></a>
             </div>
             <div class="carousel-item">
-             <a href=""> <img src="hanuman (2).jpg" class="d-block w-100" style="height: 40rem;" alt="..."></a>
+             <a href=""> <img src="" class="d-block w-100" style="height: 40rem;" alt="..."></a>
             </div>
             <div class="carousel-item">
-             <a href=""> <img src="hanuman (2).jpg" class="d-block w-100" style="height: 40rem;" alt="..."></a>
+             <a href=""> <img src="" class="d-block w-100" style="height: 40rem;" alt="..."></a>
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide"
@@ -99,7 +102,7 @@
         <h2>Physics Books</h2>
         <div class="book-card">
           <div class="b-img">
-            <img src="/hanuman (2).jpg" alt="">
+            <img src="..." alt="">
           </div>
           <div class="b-content">
             <h3>Nutan book</h3>
@@ -112,7 +115,7 @@
         </div>
         <div class="book-card">
           <div class="b-img">
-            <img src="/hanuman (2).jpg" alt="">
+            <img src="..." alt="">
           </div>
           <div class="b-content">
             <h3>Nutan book</h3>
@@ -125,7 +128,7 @@
         </div>
         <div class="book-card">
           <div class="b-img">
-            <img src="/hanuman (2).jpg" alt="">
+            <img src="..." alt="">
           </div>
           <div class="b-content">
             <h3>Nutan book</h3>
@@ -142,13 +145,13 @@
         <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
           <div class="carousel-inner">
             <div class="carousel-item active">
-             <a href=""> <img src="hanuman (2).jpg" class="d-block w-100" style="height: 40rem;" alt="..."></a>
+             <a href=""> <img src="" class="d-block w-100" style="height: 40rem;" alt="..."></a>
             </div>
             <div class="carousel-item">
-             <a href=""> <img src="hanuman (2).jpg" class="d-block w-100" style="height: 40rem;" alt="..."></a>
+             <a href=""> <img src="" class="d-block w-100" style="height: 40rem;" alt="..."></a>
             </div>
             <div class="carousel-item">
-             <a href=""> <img src="hanuman (2).jpg" class="d-block w-100" style="height: 40rem;" alt="..."></a>
+             <a href=""> <img src="" class="d-block w-100" style="height: 40rem;" alt="..."></a>
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide"
@@ -164,11 +167,25 @@
         </div>
     </div>
 
-  </section>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+  </section> -->
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-    crossorigin="anonymous"></script>
-  <script src="home.js"></script>
+    crossorigin="anonymous"></script> -->
+  <script>
+
+    const likeOnProduct = async () => {
+      const user_status = document.querySelector(".user-status");
+      const isLoginStatus = Array.from(user_status.classList)[1];
+      if (isLoginStatus === "user-logined") {
+        console.log(isLoginStatus);
+
+      } if (isLoginStatus === "user-login") {
+        console.log(isLoginStatus);
+      }
+
+    }
+    likeOnProduct()
+  </script>
 </body>
 
 </html>
