--- a/workingArea.html
+++ b/workingArea.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="working.css">
     <title>Document</title>
 </head>
 <body>
     <div class="publishing-area">
         <form action="/published" method="post">
             <input type="text" name="book" placeholder="book.." required autocomplete="off">
-            <input type="file" name="imgUrl" placeholder="choose image.." required autocomplete="off">
+            <input type="file"  name="imgUrl" placeholder="choose image.." required autocomplete="off">
             <input type="text" name="author" placeholder="author.." required autocomplete="off">
             <input type="date" name="publishingdate" placeholder="date.." required autocomplete="off">
             <input type="text" name="publisher" placeholder="publisher.." required autocomplete="off">
