--- a/checkout.html
+++ b/checkout.html
@@ -5,24 +5,47 @@
     <title>Accept a payment</title>
     <meta name="description" content="A demo of a payment on Stripe" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="checkout.css" />
+    <link rel="stylesheet" href="/scss/checkout_scss/checkout.css" />
     <script src="https://js.stripe.com/v3/"></script>
-    <script src="checkout.js" defer></script>
   </head>
   <body>
-    <!-- Display a payment form -->
     <form id="payment-form">
+      <!-- <input type="text" id="card-number" placeholder="Card Number">
+      <input type="text" id="expiry-date" placeholder="MM / YY">
+      <input type="text" id="cvc" placeholder="CVC"> -->
+      <div id="submit">Pay Now</div>
+      <button type="submit">Pay now</button>
+      <div class="show"></div>
+    </form>
+
+    <!-- Display a payment form 
+      <form id="payment-form">
       <div id="link-authentication-element">
-        <!--Stripe.js injects the Link Authentication Element-->
+      -Stripe.js injects the Link Authentication Element
       </div>
       <div id="payment-element">
-        <!--Stripe.js injects the Payment Element-->
+        Stripe.js injects the Payment Element
       </div>
       <button id="submit">
         <div class="spinner hidden" id="spinner"></div>
         <span id="button-text">Pay now</span>
       </button>
       <div id="payment-message" class="hidden"></div>
-    </form>
+    </form> -->
+    <script>
+      const stripe = Stripe("pk_test_51NNH3OSCI5qRRjQx1cj3ewMSMaJOryP8xrDqDuecVvC6ezgj57TOTo3vlthLjmv2ddv9pVjEZ7yC448HUkZrJF3i00NomjSQq4")
+      const element = stripe.elements()
+      const card= element.create('card',{style:{},hidePostalCode:true});
+      card.mount('#submit')
+      const form = document.querySelector("#payment-form")
+      form.addEventListener("submit",async(event)=>{
+        event.preventDefault()
+      const {error,token}= await stripe.createToken(card)
+      console.log(token,error);
+      // document.querySelector(".show").innerHTML=token||error
+
+      })
+     
+    </script>
   </body>
 </html>
