--- a/pro.html
+++ b/pro.html
@@ -13,11 +13,45 @@
 </head>
 
 <body>
-  <div class="collapse" id="myCollapse">
-    
-      Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user
-      activates the relevant trigger.
-    
+  <div class="mx-0 mx-sm-auto">
+    <div class="card">
+      <div class="card-body">
+
+
+        <form class="px-2" action="">
+          <p class="text-center"><strong>How do you rate customer support:</strong></p>
+
+          <ul class="h2 rating justify-content-center pb-3" data-mdb-toggle="rating">
+            <li>
+              <i class="far fa-star fa-sm text-primary" title="Bad"></i>
+            </li>
+            <li>
+              <i class="far fa-star fa-sm text-primary" title="Poor"></i>
+            </li>
+            <li>
+              <i class="far fa-star fa-sm text-primary" title="OK"></i>
+            </li>
+            <li>
+              <i class="far fa-star fa-sm text-primary" title="Good"></i>
+            </li>
+            <li>
+              <i class="far fa-star fa-sm text-primary" title="Excellent"></i>
+            </li>
+          </ul>
+
+          <p class="text-center"><strong>What could we improve?</strong></p>
+
+          <!-- Message input -->
+          <div class="form-outline mb-4">
+            <textarea class="form-control" id="form4Example6" rows="4"></textarea>
+            <label class="form-label" for="form4Example6">Your feedback</label>
+          </div>
+        </form>
+      </div>
+      <div class="card-footer text-end">
+        <button type="button" class="btn btn-primary">Submit</button>
+      </div>
+    </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
