--- a/pro.html
+++ b/pro.html
@@ -5,62 +5,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+ 
 </head>
 
 <body>
-  <div class="mx-0 mx-sm-auto">
-    <div class="card">
-      <div class="card-body">
+  <!-- Section: Timeline -->
+  <div class="container">
 
 
-        <form class="px-2" action="">
-          <p class="text-center"><strong>How do you rate customer support:</strong></p>
-
-          <ul class="h2 rating justify-content-center pb-3" data-mdb-toggle="rating">
-            <li>
-              <i class="far fa-star fa-sm text-primary" title="Bad"></i>
-            </li>
-            <li>
-              <i class="far fa-star fa-sm text-primary" title="Poor"></i>
-            </li>
-            <li>
-              <i class="far fa-star fa-sm text-primary" title="OK"></i>
-            </li>
-            <li>
-              <i class="far fa-star fa-sm text-primary" title="Good"></i>
-            </li>
-            <li>
-              <i class="far fa-star fa-sm text-primary" title="Excellent"></i>
-            </li>
-          </ul>
-
-          <p class="text-center"><strong>What could we improve?</strong></p>
-
-          <!-- Message input -->
-          <div class="form-outline mb-4">
-            <textarea class="form-control" id="form4Example6" rows="4"></textarea>
-            <label class="form-label" for="form4Example6">Your feedback</label>
-          </div>
-        </form>
-      </div>
-      <div class="card-footer text-end">
-        <button type="button" class="btn btn-primary">Submit</button>
-      </div>
-    </div>
+    
   </div>
+  <!-- Section: Timeline -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
   <script>
-
-    const bsCollapse = new bootstrap.Collapse('#myCollapse', {
-      toggle: true
-    })
   </script>
 </body>
 
